--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learning-git-2",
   "version": "1.0.0",
-  "description": "Celsius to Fahrenheit conversion",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "npm-run-all test:*",
@@ -15,11 +15,9 @@
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
+    "watch:browsersync": "node_modules/.bin/browser-sync start --server --files css/*.css *.html --watch",
     "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
-    "watch:sassprefixer": "onchange scss/*.scss -- npm-run-all sassprefixer:*",
-    "sassprefixer:sass": "node-sass --output-style expanded --source-map true -o css scss",
-    "sassprefixer:autoprefixer": "autoprefixer-cli css/style.css",
-    "watch:browsersync": "browser-sync start --server --files css/*.css *.html --watch"
+    "watch:autoprefixer": "onchange -d 100 css/style.css -- autoprefixer-cli -o css/style.prefixed.css css/style.css"
   },
   "repository": {
     "type": "git",
